--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 mvn sonar:sonar \
-  -Dsonar.projectKey=Springbootapp \
+  -Dsonar.projectKey=spring \
   -Dsonar.host.url=http://3.6.90.54:8000 \
-  -Dsonar.login=4dd24d35915b213ff8dcbe5f206046e98912daeb
+  -Dsonar.login=d7e031b13998d61cbff571294db6364afeb0aa69
