--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,10 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+   
+</plugin>
     </build>
 </project>
