--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+              </plugin>
+             <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.3.0.603</version>
+          </plugin>
         </plugins>
+        <build>
+        
+            
+        
+    </build>
     </build>
 </project>
