--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 mvn sonar:sonar \
   -Dsonar.projectKey=spring \
-  -Dsonar.host.url=http://3.6.90.54:8000 \
+  -Dsonar.host.url=http://13.233.245.16:8000/ \
   -Dsonar.login=d7e031b13998d61cbff571294db6364afeb0aa69
