--- a/springboot.yml
+++ b/springboot.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: springboot-container
-        image: shreya
+        image: shreya:v1
         ports:
         - containerPort: 80
