--- a/springboot.yml
+++ b/springboot.yml
@@ -14,6 +14,5 @@ spec:
     spec:
       containers:
       - name: springboot-container
-        image: shreya:v1
-        ports:
-        - containerPort: 80
+        image: 655645242246.dkr.ecr.ap-south-1.amazonaws.com/mydockerrepo:v1
+        
